Make TextIteratorAlgorithm<T>::ShouldRepresentNodeOffsetZero() to respect template parameter

This patch changes |ShouldRepresentNodeOffsetZero()| in |TextIteratorAlgorithm
<Strategy>| to use |PositionTemplate<T>| and |VisiblePosition<T>| to use
proper positions based on template parameter.


Bug: 852624
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: Id754f9858721cc11cbd045232bb1f873cccf34b1
Reviewed-on: https://chromium-review.googlesource.com/1128792
Reviewed-by: Yoichi Osato <yoichio@chromium.org>
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573654}
Former-commit-id: 5dd01824d11951820e2c422dc00509db076478c5